--- a/src/App.css
+++ b/src/App.css
@@ -849,15 +849,14 @@ tr > th {
   display: block;
   margin-right: 20px;
   border-radius: 9px;
-  background: #0F1325;
 }
 
 .nav-balance {
   display: inline-block;
-  padding: 3px 10px;
+  padding: 3px 15px 3px 10px;
   border-radius: 9px 0 0 9px;
   background: #0F1325;
-
+  margin-right: -10px;
 }
 
 .nav-account {
@@ -1026,8 +1025,8 @@ top: 80px;
 
 .balance-animation {
   z-index: 0;
-	-webkit-animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	        animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	-webkit-animation: slide-in-right 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: slide-in-right 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
 @-webkit-keyframes slide-in-right {
