--- a/src/App.css
+++ b/src/App.css
@@ -118,7 +118,7 @@ button[disabled]{
 }
 
 table {
-  width: 100%;
+  width: 610px;
 }
 
 .table-wrapper-outside {
@@ -184,12 +184,23 @@ tr > th {
   height: 100%;
 }
 
+.progress-bar-wrapper {
+  top: -10px;
+  margin-bottom: 10px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 5px 20px;
+}
+
 .outer-progress {
   border: 1px solid #27f09e;
   height: 10px;
   border-radius: 100px;
   padding: 1px;
   position: relative;
+
 }
 
 .inner-progress-line {
@@ -213,17 +224,9 @@ tr > th {
   border-radius: 100px 0px 0px 100px;
 }
 
-.progress-bar-wrapper {
-  top: -10px;
-  margin-bottom: 10px;
-  position: relative;
-}
 
-.progress-max-num {
-  position: absolute;
-  right: -36px;
-  top: -3px;
-}
+
+
 
 .modal-container {
   background: rgba(0, 0, 0, 0.515);
